--- a/src/scss/components/_ImageAndCards.scss
+++ b/src/scss/components/_ImageAndCards.scss
@@ -4,7 +4,7 @@
   background-color: map-get($brand-colors, 'white-cream');
   padding: 40px 0 24px !important;
   @include media-breakpoint-up(md) {
-    padding: 96px 0 88px !important;
+    padding: 72px 0 88px !important;
   }
 }
 
